instalando material design

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -8,22 +8,23 @@
 }
 
 body {
-    background: #fdd6fd;
+    background: #ffffff;
+    font-family: 'Neucha', cursive !important;
     color: black;
     margin: 0;
     padding: 0;
 }
 
 body::-webkit-scrollbar {
-    width: 0.25rem;
+    width: 0.8rem;
 }
 
 body::-webkit-scrollbar-track {
-    background: #990899;
+    background: #555678;
 }
 
 body::-webkit-scrollbar-thumb {
-    background: chocolate;
+    background: #a9f1af;
 }
 
 main {
@@ -31,11 +32,17 @@ main {
     padding: 1rem;
 }
 
-.navbar {
+header {
     position: fixed;
     background: var(--bg-primary);
     transition: width 200ms ease;
 }
+
+/*.navbar {
+    position: fixed;
+    background: var(--bg-primary);
+    transition: width 200ms ease;
+}*/
 
 .navbar-nav {
     list-style: none;
@@ -44,7 +51,6 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
 .nav-item {
@@ -106,7 +112,7 @@ main {
     margin-bottom: 1rem;
     text-align: center;
     color: var(--text-secondary);
-    background: var(--bg-secondary);
+    background: var(--bg-primary);
     font-size: 1.5rem;
     text-transform: uppercase;
     letter-spacing: 0.3ch;
@@ -123,10 +129,11 @@ main {
 
 /* Small screens */
 @media only screen and (max-width: 600px) {
-    .navbar {
+    header {
         bottom: 0;
         width: 100vw;
         height: 5rem;
+        
     }
 
     .logo {
@@ -153,13 +160,16 @@ main {
 /* Large screens */
 @media only screen and (min-width: 600px) {
    
-    .navbar {
+    header {
         top: 0;
         width: 5rem;
         height: 100vh;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
     }
 
-    .navbar:hover {
+    header:hover {
         width: 16rem;
     }
 
