--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,7 @@
 :root {
     font-size: 16px;
-    --text-primary: #b696b6;
-    --text-secondary: #990899;
+    --text-primary: #ffffff;
+    --text-secondary: #42435f;
     --bg-primary: #555678;
     --bg-secondary: #a9f1af;
     --transition-speed: 600ms;
@@ -28,7 +28,6 @@ body::-webkit-scrollbar-thumb {
 }
 
 main {
-    margin-left: 5rem;
     padding: 1rem;
 }
 
@@ -38,11 +37,28 @@ header {
     transition: width 200ms ease;
 }
 
+#navbar-nav {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+}
+
+.fa-primary {
+    background: #990899;
+}
+
+.nav-link {
+    filter: grayscale(100%) opacity(0.7);
+    transition: var(--transition-speed);
+}
+
 /*.navbar {
     position: fixed;
     background: var(--bg-primary);
     transition: width 200ms ease;
-}*/
+}
 
 .navbar-nav {
     list-style: none;
@@ -89,9 +105,7 @@ header {
     display: block;
 }
 
-.fa-primary {
-    color: #990899;
-}
+
 
 .fa-secondary {
     color: aqua;
@@ -122,44 +136,75 @@ header {
 .logo i {
     transform: rotate(0deg);
     transition: transform var(--transition-speed);
-}
+}*/
 
 
 
 
 /* Small screens */
 @media only screen and (max-width: 600px) {
+    main {
+        margin: 0;
+    }
+
     header {
         bottom: 0;
         width: 100vw;
-        height: 5rem;
-        
+        height: 5.5rem;    
     }
 
-    .logo {
+    #logo, #mode-dark, .link-text {
         display: none;
     }
 
-    .navbar-nav {
+    #navbar, #navbar-nav, .nav-link {
+        width: 100%;
+        height: 100%;
+    }
+
+    #navbar-nav {
         flex-direction: row;
+    }
+
+    .nav-item {
+        width: 20%;
+        height: 100%;    
+    }
+
+    .nav-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-decoration: none;
+    }
+    
+    .nav-item:hover {
+        background: cornflowerblue;
+    }
+
+    .nav-link:hover {
+        color: #ffffff;
+        filter: grayscale(0%) opacity(1);
+    }
+
+    /*
+    #navbar:hover .link-text {
+        display: block;
     }
 
     .nav-link {
         justify-content: center;
     }
 
-    main {
-        margin: 0;
-    }
+    
 
     .navbar:hover .logo i {
         transform: rotate(-180deg);
-    }
+    }*/
 }
 
 /* Large screens */
 @media only screen and (min-width: 600px) {
-   
     header {
         top: 0;
         width: 5rem;
@@ -190,5 +235,8 @@ header {
         justify-content: center;
     }
 
-   
+    main {
+        margin-left: 5rem;
+        padding: 1rem;
+    }
 }
