--- a/src/css/index.css
+++ b/src/css/index.css
@@ -49,9 +49,14 @@ header {
     background: #990899;
 }
 
+
+.link-text {
+    display: none;
+    margin-left: 1rem;
+}
+
 .nav-link {
-    filter: grayscale(100%) opacity(0.7);
-    transition: var(--transition-speed);
+    text-decoration: none;
 }
 
 /*.navbar {
@@ -150,7 +155,7 @@ header {
     header {
         bottom: 0;
         width: 100vw;
-        height: 5.5rem;    
+        height: 5rem;    
     }
 
     #logo, #mode-dark, .link-text {
@@ -162,8 +167,8 @@ header {
         height: 100%;
     }
 
-    #navbar-nav {
-        flex-direction: row;
+    #navbar {
+        transition: width 600ms ease;
     }
 
     .nav-item {
@@ -172,10 +177,9 @@ header {
     }
 
     .nav-link {
-        display: flex;
         justify-content: center;
-        align-items: center;
-        text-decoration: none;
+        filter: grayscale(100%) opacity(0.7);
+        transition: var(--transition-speed);
     }
     
     .nav-item:hover {
@@ -186,26 +190,12 @@ header {
         color: #ffffff;
         filter: grayscale(0%) opacity(1);
     }
-
-    /*
-    #navbar:hover .link-text {
-        display: block;
-    }
-
-    .nav-link {
-        justify-content: center;
-    }
-
-    
-
-    .navbar:hover .logo i {
-        transform: rotate(-180deg);
-    }*/
 }
 
 /* Large screens */
 @media only screen and (min-width: 600px) {
     header {
+        left: 0;
         top: 0;
         width: 5rem;
         height: 100vh;
@@ -218,25 +208,51 @@ header {
         width: 16rem;
     }
 
-    .navbar:hover .link-text {
+    header:hover .link-text {
         display: inline;
-        transition: opacity var(--transition-speed);
-    }
-
-    .logo {
-        display: block;
-    }
-
-    .navbar-nav {
-        flex-direction: column
-    }
-
-    .nav-link {
-        justify-content: center;
     }
 
     main {
         margin-left: 5rem;
-        padding: 1rem;
+    }
+
+    #navbar, #navbar-nav, .nav-item, .nav-link, #logo, #mode-dark {
+        width: 100%;
+        left: 0;
+    }
+
+    #navbar {
+        height: 50%;
+        padding: 0;
+        margin: 0;
+    }
+
+    #navbar-nav {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        height: 100%;       
+    }
+
+    .nav-item {
+        height: 20%;
+    }
+
+    .nav-link {
+        justify-content: space-between;
+        text-decoration: none;
+        height: 100%;
+    }
+
+    header:hover .nav-link i {
+        margin-left: 1rem;
+    }
+
+    header:hover .nav-link .link-text {
+        margin-right: 1rem;
+    }
+
+    #logo img {
+        width: 80px;
     }
 }
