agregand divs seccion abut

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -35,3 +35,7 @@ body::-webkit-scrollbar-thumb {
                  -1px 1px 0 #555678,
                  1px 1px 0 #555678;
 }
+
+.text-justify {
+    text-align: justify;
+}
