--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,8 @@
 @import url(./root.css);
 @import url(./menunav.css);
 @import url(./home.css);
-@import url(./project.css);
+@import url(./projects.css);
+@import url(./aboutme.css);
 
 body {
     font-family: 'Neucha', cursive !important;
