avance view skills

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,6 +3,8 @@
 @import url(./home.css);
 @import url(./projects.css);
 @import url(./aboutme.css);
+@import url(./skills.css);
+
 
 body {
     font-family: 'Neucha', cursive !important;
