implementacion de habilidades blandas en section skills

--- a/src/css/skills.css
+++ b/src/css/skills.css
@@ -1,8 +1,11 @@
+.w-img-cubo {
+    width: 60%;
+}
+
 /* Cubo */
 div.espacio3D {
-    width: 500px; /* 300px */
-    height: 500px;  /* 300px */
-    margin: -65px auto 0 auto;
+    width: 400px; /* 300px */
+    height: 400px;  /* 300px */
     perspective-origin: center -50%;
     perspective: 700px; /* 500px */
     transform: scale(0.5);
@@ -22,8 +25,8 @@ div.cubo3D {
   
 div.base {
     position: absolute;
-    width: 250px;  /* 150px */
-    height: 250px;  /* 150px */
+    width: 200px;  /* 150px */
+    height: 200px;  /* 150px */
     background-color: rgba(0,0,0,0.15);
     transform: translateX(125px) translateY(125px) rotateX(90deg) translateZ(-300px); /* 75px 75px 90deg -200px */
     box-shadow: 0 0 50px 100px rgba(0,0,0,0.15);
@@ -31,8 +34,8 @@ div.base {
 
 aside.cara {
     position: absolute;
-    width: 498px; /* 298px */
-    height: 498px;  /* 298px */
+    width: 398px; /* 298px */
+    height: 398px;  /* 298px */
     background-color: rgba(110, 108, 216, 0.986);
     border: 1px solid #0062ff;
     color: rgb(49, 49, 49);
@@ -43,44 +46,44 @@ aside.cara {
 }
   
 aside.cara1 { /* Frente */
-    transform: translateZ(250px);  /* 150px */
+    transform: translateZ(200px);  /* 150px */
 }
   
 aside.cara2 { /* Atrás */
-    transform: rotateY(180deg) translateZ(250px); /* 150px */
+    transform: rotateY(180deg) translateZ(200px); /* 150px */
 }
   
 aside.cara3 { /* Izquierda */
-    transform: rotateY(-90deg) translateZ(250px);  /* 150px */
+    transform: rotateY(-90deg) translateZ(200px);  /* 150px */
 }
   
 aside.cara4 { /* derecha */
-    transform: rotateY(90deg) translateZ(250px); /* 150px */
+    transform: rotateY(90deg) translateZ(200px); /* 150px */
 }
   
 aside.cara5 { /* abajo */
-    transform: rotateX(-90deg) translateZ(250px);  /* 150px */
+    transform: rotateX(-90deg) translateZ(200px);  /* 150px */
 }
   
 aside.cara6 { /* arriba */
-    transform: rotateX(90deg) translateZ(250px);  /* 150px */
+    transform: rotateX(90deg) translateZ(200px);  /* 150px */
 }
   
 @keyframes gira {
     0% {
-      transform: translateZ(-70px) rotateY(-180deg);  /* 150px */
+      transform: translateZ(30px) rotateY(180deg);  /* 150px */
     }
 
     25% {
-        transform: translateY(70px) rotateX(-90deg);  /* 150px */
+      transform: translateY(30px) rotateX(-90deg);  /* 150px */
     }
 
     75% {
-        transform: translateX(70px) rotateY(-90deg);  /* 150px */
+       transform: translateY(-30px) rotateZ(90deg);  /* 150px */
     }
 
     100% {
-      transform: translateZ(-70px) rotateY(180deg);  /* 150px */
+      transform: translateZ(-30px) rotateX(180deg);  /* 150px */
     }
 }
 
