--- a/src/css/skills.css
+++ b/src/css/skills.css
@@ -6,9 +6,10 @@
 div.espacio3D {
     width: 400px; /* 300px */
     height: 400px;  /* 300px */
-    perspective-origin: center -50%;
-    perspective: 700px; /* 500px */
+    /* perspective-origin: center -50%; */
+    perspective: 50em; /* 500px */
     transform: scale(0.5);
+    background-color: bisque;
 }
   
 div.cubo3D {
@@ -16,7 +17,7 @@ div.cubo3D {
     height: 100%;
     position: absolute;
     transform-style: preserve-3d;
-    transform: translateZ(-250px); /* -150px */
+    transform: translateZ(-200px); /* -150px */
     animation-name: gira;
     animation-duration: 7000ms; /* 4000ms */
     animation-iteration-count: infinite;
@@ -25,8 +26,8 @@ div.cubo3D {
   
 div.base {
     position: absolute;
-    width: 200px;  /* 150px */
-    height: 200px;  /* 150px */
+    width: 150px;  /* 150px */
+    height: 150px;  /* 150px */
     background-color: rgba(0,0,0,0.15);
     transform: translateX(125px) translateY(125px) rotateX(90deg) translateZ(-300px); /* 75px 75px 90deg -200px */
     box-shadow: 0 0 50px 100px rgba(0,0,0,0.15);
